# SkripsieCode

./: .gitignore  README.md
Mathematica/: J_washer.vtk  curl.nb
Report/: mybib.bib  stellenbosch_ee_report.aux  stellenbosch_ee_report.bbl  stellenbosch_ee_report.blg  stellenbosch_ee_report.fdb_latexmk  stellenbosch_ee_report.fls  stellenbosch_ee_report.lof  stellenbosch_ee_report.lot  stellenbosch_ee_report.out  stellenbosch_ee_report.synctex(busy)  stellenbosch_ee_report.tex  stellenbosch_ee_report.toc
Report (1)/: stellenbosch_ee_report.aux  stellenbosch_ee_report.fdb_latexmk  stellenbosch_ee_report.fls  stellenbosch_ee_report.lof  stellenbosch_ee_report.lot  stellenbosch_ee_report.out  stellenbosch_ee_report.toc
Report (1)/appendices/: appendices.tex
Report (1)/conclusion/: conclusion.tex
Report (1)/frontmatter/: abstract.tex  acknowledgements.tex  nomenclature.tex  skripsie_title_page.tex
Report (1)/introduction/: introduction.tex
Report (1)/litreview/: litreview.tex
Report (1)/results/: results.tex
Report (1)/solutiondevelopment/: sol.tex
Report/appendices/: appendices.tex
Report/conclusion/: conclusion.tex
Report/frontmatter/: abstract.tex  acknowledgements.tex  nomenclature.tex  skripsie_title_page.tex
Report/introduction/: introduction.tex
cpp/GMSHEx/: CMakeLists.txt  main.cpp  vcpkg.json
cpp/TryRemeshing/: CMakeLists.txt  Glyph3D.cxx  Point.h  remesh.h
drawings/: Inductexproc.drawio  ProcessFLow(1).drawio  ProcessFLow.drawio  voro.geo
layouts/: mitll_sfq5ee_res.ldf
python/: proto.ipynb
testfiles/: settings_washer.json
(+1510 files in other folders)
